Re-fix Overflow

--- a/styles/_contactus.scss
+++ b/styles/_contactus.scss
@@ -1,5 +1,5 @@
 #contact-us {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   position: relative;
   background-color: #fff;
