--- a/styles/_meistrid.scss
+++ b/styles/_meistrid.scss
@@ -1,5 +1,5 @@
 #meistrid {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: $mainBgColor;
   position: relative;
