--- a/styles/_privacy.scss
+++ b/styles/_privacy.scss
@@ -1,5 +1,5 @@
 #privacy-section {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   padding-top: 100px;
   padding-bottom: 100px;
