--- a/styles/_review.scss
+++ b/styles/_review.scss
@@ -1,5 +1,5 @@
 #review {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: $mainBgColor;
   position: relative;
