--- a/styles/style.css
+++ b/styles/style.css
@@ -431,7 +431,7 @@ p {
 }
 
 #meistrid {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: #2c5364;
   position: relative;
@@ -657,7 +657,7 @@ p {
 }
 
 #review {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   background-color: #2c5364;
   position: relative;
@@ -927,7 +927,7 @@ p {
 }
 
 #contact-us {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   position: relative;
   background-color: #fff;
@@ -1164,7 +1164,7 @@ p {
 }
 
 #footer {
-  width: 100%;
+  width: 100vw;
   height: 80px;
   position: relative;
   background-color: #2c5364;
@@ -1254,7 +1254,7 @@ p {
 }
 
 #privacy-section {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   padding-top: 100px;
   padding-bottom: 100px;
